# rust-docker-compose

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: docker-entry-point.sh  main.rs
